Fixin' gap

--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -177,7 +177,7 @@ a {
 }
 
 #home .welcome-message .bold {
-    margin-top: 40px;
+    margin-top: 30px;
     display: block;
     font-size: 2em;
 }
